--- a/index.Rmd
+++ b/index.Rmd
@@ -474,6 +474,16 @@ sample_wgs84$long <- coords[, 1]
 st_write(sample_wgs84, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/sample_points.shp", append = FALSE )
 ```
 
+```{r}
+lim_paul_32632 <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/VETTORIALI/Limite_Amministrativo_Paulilatino_EPSG-32632.shp")
+
+# Assign the CRS of ex_sf to points
+lim_paul_wgs84 <- st_transform(lim_paul_32632, crs = 4326)
+
+st_write(lim_paul_wgs84, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/VETTORIALI/Limite_Amministrativo_Paulilatino_wgs84.shp", append = FALSE )
+
+```
+
 ```{r, message=FALSE, warning=FALSE}
 # Carica le librerie necessarielibrary(leaflet)
 library(leaflet.extras)
@@ -484,6 +494,9 @@ pixel_trend <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLI
 
 # Carico il file della geolocalizzazione dei campioni
 samples <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/sample_points.shp")
+
+lim_paul_wgs84 <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/VETTORIALI/Limite_Amministrativo_Paulilatino_wgs84.shp")
+
 
 # Define a custom color palette for classes
 class_palette <- c("Crescente" = "#00ff00",  # Green
@@ -526,27 +539,34 @@ map <- leaflet(options = leafletOptions(maxZoom = 22)) %>%
             opacity = 0.6,
             position = "bottomright"
   ) %>% 
- addPolygons(data = pixel_trend, 
-             fillColor = ~color_factor(clss_tr),
-             fillOpacity = 0.6,
-             highlightOptions = highlightOptions(color = "white", weight = 2,
-                                                 bringToFront = TRUE),
-             popup = ~paste("COD:", COD, "<br/>coef:", coef, "<br/>classe:", clss_tr),
-             group = 'Crowns',
-             stroke = TRUE,
-             weight = 1
- ) %>%
- addLegend(pal = color_factor,
-           values = pixel_trend$clss_tr,
-           title = "NDVI Trend Intensity",
-           opacity = 0.6,
-           position = "topright"
- ) %>% 
- addFullscreenControl() %>%
- addLayersControl(
-   overlayGroups = c("Crowns", "samples"),
-   options = layersControlOptions(collapsed = FALSE)
- )
+  addPolygons(data = pixel_trend, 
+              fillColor = ~color_factor(clss_tr),
+              color="black",
+              fillOpacity = 0.6,
+              highlightOptions = highlightOptions(color = "white", weight = 2,
+                                                  bringToFront = TRUE),
+              popup = ~paste("COD:", COD, "<br/>coef:", coef, "<br/>classe:", clss_tr),
+              group = 'Crowns',
+              stroke = TRUE,
+              weight = 1
+  ) %>%
+  addLegend(pal = color_factor,
+            values = pixel_trend$clss_tr,
+            title = "NDVI Trend Intensity",
+            opacity = 0.6,
+            position = "topright"
+  ) %>% 
+  addPolygons(data = lim_paul_wgs84, 
+              fillOpacity=0, 
+              color="black", 
+              weight = 2
+  ) %>% 
+  addFullscreenControl() %>%
+  addLayersControl(
+    overlayGroups = c("Crowns", "samples"),
+    options = layersControlOptions(collapsed = FALSE)
+  )
+
 
 map
 
