--- a/index.Rmd
+++ b/index.Rmd
@@ -484,9 +484,116 @@ st_write(lim_paul_wgs84, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/O
 
 ```
 
+\<style\>
+
+.lim_paul_wgs84 {
+
+pointer-events: none;
+
+}
+
+\</style\>
+
+\# Crea la mappa Leaflet
+
+map \<- leaflet(options = leafletOptions(maxZoom = 22)) %\>%
+
+addProviderTiles("Esri.WorldImagery", options = providerTileOptions(maxNativeZoom = 18)) %\>%
+
+addCircleMarkers(data = samples,
+
+lng = \~long,
+
+lat = \~lat,
+
+fillColor = \~color_factor_circle(samples\$positivo),
+
+fillOpacity = 0.6,
+
+popup = \~paste("AREA:", location, "\<br/\>CAMPIONE:", id_sample, "\<br/\>SINTOMATICO:", sin_asin, "\<br/\>POSITIVITÀ:", positivo),
+
+radius = 3,
+
+group = 'samples',
+
+stroke = FALSE
+
+) %\>%
+
+addLegend(pal = color_factor_circle,
+
+values = samples\$positivo,
+
+title = "Sample Positivity",
+
+opacity = 0.6,
+
+position = "bottomright"
+
+) %\>%
+
+addPolygons(data = pixel_trend,
+
+fillColor = \~color_factor(clss_tr),
+
+color="black",
+
+fillOpacity = 0.6,
+
+highlightOptions = highlightOptions(color = "white", weight = 2,
+
+bringToFront = TRUE),
+
+popup = \~paste("COD:", COD, "\<br/\>coef:", coef, "\<br/\>classe:", clss_tr),
+
+group = 'Crowns',
+
+stroke = TRUE,
+
+weight = 1
+
+) %\>%
+
+addLegend(pal = color_factor,
+
+values = pixel_trend\$clss_tr,
+
+title = "NDVI Trend Intensity",
+
+opacity = 0.6,
+
+position = "topright"
+
+) %\>%
+
+addPolygons(data = lim_paul_wgs84,
+
+fillOpacity = 0,
+
+color = "black",
+
+weight = 2,
+
+group = 'lim_paul_wgs84' \# Add a group name
+
+) %\>%
+
+addFullscreenControl() %\>%
+
+addLayersControl(
+
+overlayGroups = c("Crowns", "samples", "lim_paul_wgs84"), \# Add the new group
+
+options = layersControlOptions(collapsed = FALSE)
+
+)
+
+map
+
 ```{r, message=FALSE, warning=FALSE}
 # Carica le librerie necessarielibrary(leaflet)
 library(leaflet.extras)
+library(leaflet)
 library(sf)
 
 # Carico il nuovo file con le classi
@@ -523,6 +630,12 @@ color_factor_circle <- colorFactor(
 # Crea la mappa Leaflet
 map <- leaflet(options = leafletOptions(maxZoom = 22)) %>%
   addProviderTiles("Esri.WorldImagery", options = providerTileOptions(maxNativeZoom = 18)) %>%
+  addPolygons(data = lim_paul_wgs84, 
+              fillOpacity = 0, 
+              color = "black", 
+              weight = 2,
+              group = 'Lim. Amm. Paulilatino'  # Add a group name
+  ) %>% 
   addCircleMarkers(data = samples,
                    lng = ~long,
                    lat = ~lat,
@@ -556,20 +669,13 @@ map <- leaflet(options = leafletOptions(maxZoom = 22)) %>%
             opacity = 0.6,
             position = "topright"
   ) %>% 
-  addPolygons(data = lim_paul_wgs84, 
-              fillOpacity=0, 
-              color="black", 
-              weight = 2
-  ) %>% 
   addFullscreenControl() %>%
   addLayersControl(
-    overlayGroups = c("Crowns", "samples"),
-    options = layersControlOptions(collapsed = FALSE)
+    overlayGroups = c("Crowns", "samples", "Lim. Amm. Paulilatino"),  # Add the new group
+    options = layersControlOptions(collapsed = TRUE)
   )
 
-
 map
-
 ```
 
 ```{r, eval=FALSE}
