--- a/index.Rmd
+++ b/index.Rmd
@@ -494,6 +494,327 @@ rm(list=ls())
 
 ------------------------------------------------------------------------
 
+In questa sezione si applica il procedimento eseguito da *Lambert et al., 2015* per stimare il trend delle serie temporali.
+
+```{r}
+library(sf)
+library(dplyr)
+library(lubridate)
+library(DBEST)
+library(progress)
+library(trend)
+library(mblm)
+library(RobustLinearReg)
+library(readr)
+```
+
+```{r, eval = FALSE}
+# Carica il nuovo file combinato
+NDVI_VALUES <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/merged_data_ndvi.shp")
+```
+
+```{r, eval = FALSE}
+# Imposta l'opzione scipen su un valore elevato per eliminare la notazione esponenziale dei valori
+options(scipen = 999)
+
+# Ottieni l'elenco unico dei COD
+cod_list <- unique(NDVI_VALUES$COD)
+
+# Crea un dataframe vuoto per memorizzare i risultati
+results_phenoloy <- data.frame()
+
+# Crea una nuova barra di avanzamento
+pb <- progress_bar$new(total = length(cod_list))
+
+# Esegui il ciclo for su ogni COD
+for (cod in cod_list) {
+  # Seleziona i dati per il COD corrente
+  data0 <- NDVI_VALUES[NDVI_VALUES$COD == cod, ]
+  ts <- ts(data0$ndvi, start = c(2018, 1), end = c(2023, 8), frequency = 12)
+
+  # calcola l'SOS
+  phenology <- Phenology(ts, tsgf="TSGFspline", approach="White")
+  # ottieni lo Start of Season and the End of Season per ogni albero
+  sos <- phenology$sos
+  eos <- phenology$eos
+  
+  # Converte la serie temporale in un dataframe
+  sos_df <- as.data.frame(as.numeric(sos))
+  eos_df <- as.data.frame(as.numeric(eos))
+
+  # Aggiungi i risultati al dataframe
+  results_phenoloy <- rbind(results_phenoloy, data.frame(COD = cod, SOS = sos_df, EOS = eos_df))
+
+    # Aggiorna la barra di avanzamento solo se non ha raggiunto il limite
+  if (!pb$finished) {
+    pb$tick()
+  }
+}
+```
+
+```{r, eval = FALSE}
+# Calcola la media e la deviazione standard per SOS
+mean_sos <- mean(results_phenoloy$`as.numeric.sos.`, na.rm = TRUE)
+sd_sos <- sd(results_phenoloy$`as.numeric.sos.`, na.rm = TRUE)
+
+# Calcola la media e la deviazione standard per EOS
+mean_eos <- mean(results_phenoloy$`as.numeric.eos.`, na.rm = TRUE)
+sd_eos <- sd(results_phenoloy$`as.numeric.eos.`, na.rm = TRUE)
+
+# Stampa i risultati
+print(paste("Media SOS: ", mean_sos))
+print(paste("Deviazione standard SOS: ", sd_sos))
+print(paste("Media EOS: ", mean_eos))
+print(paste("Deviazione standard EOS: ", sd_eos))
+
+# Crea un nuovo dataframe con questi oggetti
+summary_df_phenology <- data.frame(
+  Mean_SOS = mean(results_phenoloy$`as.numeric.sos.`, na.rm = TRUE),
+  SD_SOS = sd(results_phenoloy$`as.numeric.sos.`, na.rm = TRUE),
+  Mean_EOS = mean(results_phenoloy$`as.numeric.eos.`, na.rm = TRUE),
+  SD_EOS = sd(results_phenoloy$`as.numeric.eos.`, na.rm = TRUE)
+)
+
+# Aggiungi le date al dataframe
+summary_df_phenology$Date_SOS <- as.Date(summary_df_phenology$Mean_SOS, origin = "2023-01-01")
+summary_df_phenology$Date_EOS <- as.Date(summary_df_phenology$Mean_EOS, origin = "2023-01-01")
+
+# Salvo il file con le classi
+write_csv(summary_df_phenology, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/CSV/summary_df_phenology.csv", append = FALSE)
+```
+
+```{r, eval=FALSE}
+# Ripulisci l'enviroment di R
+rm(list=ls())
+```
+
+A seguito dell'analisi delle serie temporali, è stato individuato il mese di ottobre come SOS e il mesi di Maggio come EOS.
+
+```{r, warning=FALSE, message=FALSE}
+read.csv("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/CSV/summary_df_phenology.csv", header = TRUE)
+```
+
+```{r}
+# Ripulisci l'enviroment di R
+rm(list=ls())
+```
+
+------------------------------------------------------------------------
+
+```{r, eval=FALSE}
+# Carica il nuovo file combinato
+NDVI_VALUES <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/merged_data_ndvi.shp")
+```
+
+```{r, eval=FALSE}
+# Imposta l'opzione scipen su un valore elevato per eliminare la notazione esponenziale dei valori
+options(scipen = 999)
+
+# Ottieni l'elenco unico dei COD
+cod_list <- unique(NDVI_VALUES$COD)
+
+# Inizializza una lista per memorizzare i risultati
+results_sg <- data.frame()
+
+# Crea una nuova barra di avanzamento
+pb <- progress_bar$new(total = length(cod_list))
+
+# Esegui il ciclo for su ogni COD
+for (cod in cod_list) {
+  # Seleziona i dati per il COD corrente
+  data0 <- NDVI_VALUES[NDVI_VALUES$COD == cod, ]
+  
+  # Crea un nuovo dataframe con le righe tra ottobre e Maggio
+  data0_oct_may <- data0 %>% 
+    filter(month(date) >= 10 | month(date) <= 5)
+  
+  # Calcola la somma dei valori NDVI per ogni anno
+  sg_values <- data0_oct_may %>%
+    group_by(year = year(date)) %>%
+    summarise(sg = sum(ndvi))
+  
+  # Adatta una regressione lineare ai valori annuali di SG
+  sg_trend <- lm(sg ~ year, data = sg_values)
+  
+  # Estrai il coefficiente angolare (a) e l'intercetta (b) dal modello
+  a <- coef(sg_trend)["slope"]
+  b <- coef(sg_trend)["(Intercept)"]
+  
+  # Equazione della linea di regressione
+  eq = paste0(" slope = ", round(a, 8))
+  
+   # Esegui il test di Mann-Kendall
+  mk_result <- mk.test(sg_values$sg)
+  
+  # Estrai il valore p dal risultato del test
+  mk_p_value <- mk_result$p.value
+  
+  # Aggiungi i risultati al dataframe
+  results_sg <- rbind(results_sg, data.frame(COD = cod, mk_p_value = mk_p_value))
+  
+  # Rimuovi i nomi delle righe
+  rownames(results_sg) <- NULL
+
+  # Aggiorna la barra di avanzamento solo se non ha raggiunto il limite
+  if (!pb$finished) {
+    pb$tick()
+  }
+}
+
+# Aggiungi una nuova colonna per la classe di tendenza
+results_sg <- results_sg %>%
+  mutate(Trend_Class = case_when(
+    mk_p_value > 0.05 ~ 0,
+    mk_p_value > 0.01 ~ 1,
+    mk_p_value > 0.001 ~ 2,
+    TRUE ~ 3
+  ))
+```
+
+```{r, eval=FALSE}
+# Imposta l'opzione scipen su un valore elevato per eliminare la notazione esponenziale dei valori
+options(scipen = 999)
+
+# Ottieni l'elenco unico dei COD
+cod_list <- unique(NDVI_VALUES$COD)
+
+# Inizializza una lista per memorizzare i risultati
+results_list <- list()
+
+# Crea una nuova barra di avanzamento
+pb <- progress_bar$new(total = length(cod_list))
+
+# Esegui il ciclo for su ogni COD
+for (cod in cod_list) {
+  # Seleziona i dati per il COD corrente
+  data0 <- NDVI_VALUES[NDVI_VALUES$COD == cod, ]
+  
+  ts <- ts(data0$ndvi, start = c(2018, 1), end = c(2023, 8), frequency = 12)
+  fit <- lm(ndvi ~ date, data = data0)
+
+  # Esegui il test non parametrico di Mann-Kendall (MK)
+  mk_test <- smk.test(ts)
+
+  # Converti le date in numeri (numero di giorni dalla data minima)
+  data0$date_numeric <- as.numeric(data0$date - min(data0$date))
+
+  # Calcola Theil-Sen's slope (Q) utilizzando la data numerica
+  theil_sen_fit <- mblm(ndvi ~ date_numeric, data = data0)
+  
+  # Estrazione della pendenza e l'intercetta
+  slope_mblm <- theil_sen_fit$coefficients[2]
+  intercept_mblm <- theil_sen_fit$coefficients[1]
+  
+  # Estrai Q
+  Q <- coef(theil_sen_fit)[2]
+  
+  # Estrai i coefficienti
+  intercept <- coef(fit)[1]
+  slope <- coef(fit)[2]
+  
+  area <- unique(data0$COD)
+  
+  # Equazione della linea di regressione
+  eq = paste0(" slope = ", round(slope, 8))
+  
+  dbest_analysis <- DBEST::DBEST(data = ts, data.type = "cyclical", algorithm = "change detection", breakpoints.no= 10, first.level.shift= 0.1, second.level.shift=0.2, duration=12, distance.threshold="default", alpha=0.05, plot="on" )
+  
+  trend_dbest <- dbest_analysis$Fit
+  
+  trend_df <- as.data.frame(trend_dbest, row.names = FALSE)
+  colnames(trend_df) <- "ndvi"
+  
+  trend_df$date <- data0$date
+  
+  # Imposta i margini del grafico
+  par(mar = c(5, 4.5, 4, 1),  mfrow = c(1,1))
+  
+  # Crea il grafico di dispersione dei dati
+  plot(data0$date,data0$ndvi, type = "p", xlab = "Date", ylab = "NDVI values")
+  
+  # Sovrapponi la linea retta basata sui coefficienti del modello di regressione
+  abline(a = intercept, b = slope, col = "red")
+  
+  # Sovrapponi la linea retta basata sui coeficienti del modello di Theil-Sen 
+  abline(intercept_mblm, slope_mblm, col= "orange")
+  
+  # Linea di tendenza 1 (colore blu)
+  lines(smooth.spline(data0$date, data0$ndvi), col = "blue")
+  
+  # Linea di tendenza 2 (colore nero)
+  lines(trend_df$date, trend_df$ndvi, type = "l", col = "black")
+  
+  # Aggiungi il titolo e il sottotitolo
+  title(main = area)
+  mtext(eq, side = 3, line = 0.3)
+
+    # Salva i risultati e il grafico nella lista
+  results_list[[cod]] <- list(intercept = intercept, slope = slope, area = area, plot = recordPlot(), mk = mk_test)
+  
+  # Aggiorna la barra di avanzamento solo se non ha raggiunto il limite
+  if (!pb$finished) {
+    pb$tick()
+  }
+}
+
+saveRDS(results_list, file = "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/SCRIPT/TrendNdviPaulilatino/Risultati/results_list.rds")
+```
+
+```{r, eval = FALSE}
+
+results_list <- readRDS("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/SCRIPT/TrendNdviPaulilatino/Risultati/results_list.rds")
+
+# Inizializza un data frame vuoto
+results_df <- data.frame()
+
+# Crea una nuova barra di avanzamento
+pb <- progress_bar$new(total = length(results_list))
+
+# Loop attraverso ogni elemento in results_list2
+for(i in 1:length(results_list)) {
+  # Estrai i valori di area, intercept e slope
+  COD <- results_list[[i]]$area
+  intercept <- results_list[[i]]$intercept
+  slope <- results_list[[i]]$slope
+  mk_p_value <- results_list[[i]]$mk$p.value
+  
+  # Crea un data frame temporaneo con questi valori
+  temp_df <- data.frame(COD = COD, intercept = intercept, slope = slope, mk_p_value = mk_p_value)
+  
+  # Aggiungi il data frame temporaneo al nuovo database
+  results_df <- rbind(results_df, temp_df)
+  
+  # Rimuovi i nomi delle righe
+  rownames(results_df) <- NULL
+  
+ # Aggiorna la barra di avanzamento solo se non ha raggiunto il limite
+  if (!pb$finished) {
+    pb$tick()
+  }
+}
+
+# Visualizza il nuovo database
+print(results_df)
+
+# Aggiungi una nuova colonna per la classe di tendenza
+results_df <- results_df %>%
+  mutate(Trend_Class = case_when(
+    mk_p_value > 0.05 ~ 0,
+    mk_p_value > 0.01 ~ 1,
+    mk_p_value > 0.001 ~ 2,
+    TRUE ~ 3
+  ))
+
+write_csv(results_df, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/CSV/results_df_class.csv")
+```
+
+```{r}
+# Ripulisci l'enviroment di R
+rm(list=ls())
+```
+
+------------------------------------------------------------------------
+
 In questa sezione perparo il dataframe per visualizzare interattivamente la tendenza delle singole chiome in una mappa.
 
 ```{r, message=FALSE, warning=FALSE}
@@ -503,12 +824,17 @@ library(sf)
 library(quadcleanR)
 ```
 
-```{r, eval=FALSE}
+```{r, eval = FALSE}
 # Carico il file de
 pixel_trend0 <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/pixels_trend.shp")
 
+class <- read_csv("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/CSV/results_df_class.csv", col_names = T)
+
+# Unisci i due data frames
+merged_data <- merge(pixel_trend0, class, by = "COD")
+
 # Transform to WGS84
-pixel_trend_wgs84 <- st_transform(pixel_trend0, crs = 4326)
+pixel_trend_wgs84 <- st_transform(merged_data, crs = 4326)
 
 pixel_trend_wgs84$coef <- format(pixel_trend_wgs84$coef, scientific = FALSE)
 
@@ -516,22 +842,46 @@ pixel_trend_wgs84$coef <- format(pixel_trend_wgs84$coef, scientific = FALSE)
 pixel_trend_wgs84$coef <- as.numeric(pixel_trend_wgs84$coef)
 
 pixel_trend <- pixel_trend_wgs84
+```
 
-# Define the breaks for the categories
-breaks <- quantile(pixel_trend_wgs84$coef, probs = seq(0, 1, length.out = 5))
+```{r, eval=FALSE}
+# Definizione della funzione di classificazione
+classify_trend <- function(Trend_Class) {
+  if (Trend_Class == 0) {
+    return("Positive trends or trends not significantly different from the null slope")
+  } else if (Trend_Class== 1) {
+    return("Trends significantly negative, 0.05 > p-value > 0.01")
+  } else if (Trend_Class == 2) {
+    return("Trends significantly negative, 0.01 > p-value > 0.001")
+  } else if (Trend_Class == 3) {
+    return("Trends significantly negative, 0.001 > p-value")
+  }
+}
 
-# Aggiungi una nuova colonna "classe_trend" con le etichette delle classi
-pixel_trend <- pixel_trend %>%
-  mutate(classe_trend = case_when(
-    coef < breaks[[1]] + 0.000009 ~ "Decrescente Marcato",
-    coef >= breaks[[1]] + 0.000009 & coef <= breaks[[2]] ~ "Decrescente Moderato",
-    coef > breaks[[2]] & coef < breaks[[3]] + 0.000016 ~ "Decrescente Lieve",
-    coef >= breaks[[3]] + 0.000016 & coef <= breaks[[4]] + 0.000012 ~ "Stazionario",
-    coef > breaks[[4]] + 0.000011 ~ "Crescente"
-  ))
+# Applicazione della funzione al dataframe
+pixel_trend$Trend_Description <- sapply(pixel_trend$Trend_Class, classify_trend)
 
 # Salvo il file con le classi
-st_write(pixel_trend, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/pixels_trend2.shp", append = FALSE)
+st_write(pixel_trend, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/pixels_trend3.shp", append = FALSE)
+```
+
+
+```{r, eval=FALSE}
+# # Define the breaks for the categories
+# breaks <- quantile(pixel_trend_wgs84$coef, probs = seq(0, 1, length.out = 5))
+# 
+# # Aggiungi una nuova colonna "classe_trend" con le etichette delle classi
+# pixel_trend <- pixel_trend %>%
+#   mutate(classe_trend = case_when(
+#     coef < breaks[[1]] + 0.000009 ~ "Decrescente Marcato",
+#     coef >= breaks[[1]] + 0.000009 & coef <= breaks[[2]] ~ "Decrescente Moderato",
+#     coef > breaks[[2]] & coef < breaks[[3]] + 0.000016 ~ "Decrescente Lieve",
+#     coef >= breaks[[3]] + 0.000016 & coef <= breaks[[4]] + 0.000012 ~ "Stazionario",
+#     coef > breaks[[4]] + 0.000011 ~ "Crescente"
+#   ))
+# 
+# # Salvo il file con le classi
+# st_write(pixel_trend, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/pixels_trend2.shp", append = FALSE)
 ```
 
 ```{r, eval=FALSE}
@@ -581,6 +931,7 @@ focolai <- st_transform(focolai0, crs = 4326)
 
 st_write(focolai, "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/FOCOLAI_wgs84.shp", append = FALSE )
 ```
+
 ```{r, eval=FALSE}
 plots <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/BUFFER_ANALISI_NDVI.shp")
 
@@ -643,7 +994,7 @@ library(sf)
 options(scipen = 999)
 
 # Carico il nuovo file con le classi
-pixel_trend <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/pixels_trend2.shp")
+pixel_trend <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/NDVI_VALUES/pixels_trend3.shp")
 
 # Carico il file della geolocalizzazione dei campioni
 samples <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/VETTORIALI/sample_points.shp")
@@ -656,20 +1007,21 @@ plots_wgs84 <- st_read("G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLI
 
 
 # Define a custom color palette for classes
-class_palette <- c("Crescente" = "#00ff00",  # Green
-                   "Stazionario" = "#adff2f",  # Yellow-green
-                   "Decrescente Lieve" = "yellow",
-                   "Decrescente Moderato" = "orange",
-                   "Decrescente Marcato" = "red")
+class_palette <- c("p-value > 0.05" = "#00ff00",  # Green
+                   "0.05 > p-value > 0.01" = "yellow",  # Yellow-green
+                   "0.01 > p-value > 0.001" = "orange",
+                   "0.001 > p-value" = "red")
 
 # Create a color factor with the custom palette and class labels
-color_factor <- leaflet::colorFactor(palette = class_palette, levels = c("Crescente", "Stazionario", "Decrescente Lieve", "Decrescente Moderato", "Decrescente Marcato"))
+color_factor1 <- leaflet::colorFactor(palette = class_palette, levels = c("0", "1", "2", "3"))
+
+color_factor2 <- leaflet::colorFactor(palette = class_palette, levels = c("Positive trends or trends not significantly different from the null slope", "Trends significantly negative, 0.05 > p-value > 0.01", "Trends significantly negative, 0.01 > p-value > 0.001", "Trends significantly negative, 0.001 > p-value"))
 
 # Definisci l'ordine desiderato delle etichette delle classi
-custom_order <- c("Crescente", "Stazionario", "Decrescente Lieve", "Decrescente Moderato", "Decrescente Marcato")
+custom_order <- c("0", "1", "2", "3")
 
-# Assicurati che 'classe_trend' sia un factor con l'ordine definito
-pixel_trend$clss_tr <- factor(pixel_trend$clss_tr, levels = custom_order)
+# Make sure 'Trnd_Ds' is a factor with the defined order
+pixel_trend$Trnd_Cl  <- factor(pixel_trend$Trnd_Cl , levels = custom_order)
 
 # Crea una funzione di colorazione per i cerchi
 color_factor_circle <- colorFactor(
@@ -715,19 +1067,19 @@ map <- leaflet(options = leafletOptions(maxZoom = 22)) %>%
             position = "bottomright"
   ) %>% 
   addPolygons(data = pixel_trend, 
-              fillColor = ~color_factor(clss_tr),
+              fillColor = ~color_factor1(Trnd_Cl),
               color="black",
               fillOpacity = 0.6,
               highlightOptions = highlightOptions(color = "white", weight = 2,
                                                   bringToFront = TRUE),
-              popup = ~paste("COD:", COD, "<br/>coef:", coef, "<br/>classe:", clss_tr),
+              popup = ~paste("COD:", COD, "<br/>slope:", slope, "<br/>class:", Trnd_Cl, "<br/>Description:", Trnd_Ds ),
               group = 'Crowns',
               stroke = TRUE,
               weight = 1
   ) %>%
   addLegend(title = "Trend: lm(NDVI ~ Month)",
-            pal = color_factor,
-            values = pixel_trend$clss_tr,
+            pal = color_factor2,
+            values = pixel_trend$Trnd_Ds,
             opacity = 0.6,
             position = "topright"
   ) %>% 
@@ -753,7 +1105,7 @@ map
 library(htmlwidgets)
 
 # Salva la mappa
-saveWidget(map, file = "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/map2.html", selfcontained = FALSE)
+saveWidget(map, file = "G:/Altri computer/Il_mio_computer/DOTTORATO/PROGETTI/OLIVASTRO_PAULILATINO/REGRESSIONE/map4.html", selfcontained = FALSE)
 ```
 
 ```{r, eval=FALSE}
